# SuperNovel

./: .gitignore  CLAUDE.md  README.md  README_fr-FR.md  README_ja.md  README_sawcuengh.md  README_zh-CN.md  config.example.json  consistency_checker.py  pyproject.toml
web/: app.py
web/static/: index.html
web/static/css/: style.css
web/static/js/: app.js
